# not_sure

./: .gitignore  Cargo.toml  tailwind.config.js
migrations/2023-10-03-153115_user_tables/: down.sql  up.sql
migrations/2023-10-03-194101_add_name_col_to_individual/: down.sql  up.sql
migrations/2023-10-03-200940_change_constraints/: down.sql  up.sql
src/: configuration.rs  database.rs  main.rs  model.rs  schema.rs  state.rs  trace.rs
src/model/: individuals.rs  organizations.rs  users.rs
templates/: index.html
