[package]
name = "not_sure"
version = "0.1.0"
edition = "2021"
authors = ["Ramzi Abou Chahine <ramziachahine@pm.me>"]

[dependencies]
axum = {version = "0.6.20", default-features = true, features = ["macros"]}
diesel = {version = "2.1.2", default-features = false, features = ["postgres", "chrono", "uuid", "r2d2"]}
serde = {version = "1.0.188", default-features = false, features = ["std", "derive"]}
tokio = {version = "1.32.0", features = ["full"]}
toml = {version = "0.8.1", default-features = true}
tower = {version = "0.4.13" }
tower-http = {version = "0.4.4", features = ["full"]}
tracing = {version = "0.1.37", default-features = true}
tracing-subscriber = {version = "0.3.17", default-features = true, features = ["json", "env-filter"]}

[build]
rustflags = ["-L/opt/homebrew/opt/libpq/lib"]
